--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   color: #a8a9b4;
-  padding: 12px 15px;
+  padding: 2px;
   margin-bottom: 8px;
   transition: 0.3s;
   font-size: 15px;
